Wrap NEWS -- history of user-visible changes.

Copyright (C) 1996-2016 Paul J. Lucas.
See the end of the file for license conditions.

* Changes in Wrap 3.3

** Added whitespace prototype option.
Wrap now has a -P option that treats the leading whitespace on the first line
as a prototype for all subsequent lines.

** Special-case handling of non-comment lines.
In wrapc, if the first line isn't a comment, then the leading whitespace alone
is used as a prototype for subsequent lines and wrap(1) is never told to copy
lines verbatim.

* Changes in Wrap 3.2

** Improved leader handling.
In wrapc, the leader used to be defined as ^[{WS}{CC}]* (where WS are
whitespace characters and CC are comment characters) but this didn't work well
with comments like " // * Bullet"; hence the leader is now defined as
^{WS}*{CC}+{WS}*.

** Now using standard sysexits exit codes.
Exit codes are now those specified by sysexits(3).

* Changes in Wrap 3.1

** Fixed extraneous trailing whitespace.
Comment lines that contained only leading whitespace and the comment delimiter
no longer have trailing whitespace added.

** Stops wrapping text upon non-comment line.
If a line is encountered that does not start with whitespace followed by
comment delimiters, it signals the end of the comment and all remaining lines
are passed through verbatim.

* Changes in Wrap 3.0.3

** Now using C99.
Now using C99 as the minimum required C version.

* Changes in Wrap 3.0.2

** Changed wrapc algorithm.
Wrapc now strips leading characters anew for each line preventing the loss of
characters for subsequent lines that are indented less than the first.

* Changes in Wrap 3.0.1

** Fixed handling of long lines.
Lines longer than line-width are now handled correctly.

** Fixed handling of ragged lines in wrapc.
Comment lines that don't all start with the same number of delimiters are now
handled better.

* Changes in Wrap 3.0

** Added command-line option aliases.