@@ -2,7 +2,7 @@
 .\"	wrapc -- comment reformatter
 .\"	wrapc.1: manual page
 .\"
-.\"	Copyright (C) 1996-2015  Paul J. Lucas
+.\"	Copyright (C) 1996-2016  Paul J. Lucas
 .\"
 .\"	This program is free software; you can redistribute it and/or modify
 .\"	it under the terms of the GNU General Public License as published by
@@ -34,7 +34,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3wrapc\f1 1 "March 10, 2016" "PJL TOOLS"
+.TH \f3wrapc\f1 1 "March 14, 2016" "PJL TOOLS"
 .SH NAME
 wrapc \- comment reformatter
 .SH SYNOPSIS
@@ -48,7 +48,7 @@ by wrapping and filling lines to a given
 .IR line-width ,
 the default for which is 80 characters.
 .P
-The characters that are recognized as comment delimeters are:
+The characters that are recognized as comment delimiters by default are:
 .P
 .PD 0
 .IP "\f(CW!\f1" 10
@@ -66,6 +66,9 @@ Assember and Lisp comments.
 .IP "\f(CW>\f1" 10
 Quoted mail indicator.
 .PD
+.P
+Comment delimiters are treated as such
+only when they are the first non-whitespace characters on a line.
 .P
 Leading whitespace and comment delimiters
 of the first line
@@ -131,6 +134,10 @@ if warranted.
 Suppresses reading of any configuration file,
 even one explicitly specified via
 .BR \-c .
+.TP
+.BI \-D " s"
+Specifies the set of comment delimiter characters
+overriding the default.
 .TP
 .B \-e
 Treats white-space after an end-of-sentence character as a paragraph delimiter.
