@@ -1,0 +1,1 @@
+wrapc | /dev/null | -D+ | wrapc-D-01.txt | 0
